# learn-MLOps-FTI

./: .gitignore
.github/workflows/: cd.yml  ci.yml  retraining.yml
0315/: .env.example  0318-MLOps.md  0318-MLOpspdf.md  README.md  app.py  canva.md  feature_pipeline.py  inference_pipeline.py  pyproject.toml  requirements.txt  retraining_pipeline.py  training_pipeline.py
0315/docs/: ci_cd.md  faq.md  r2_optimization.md
0315/src/: __init__.py  config.py  constants.py  features.py  utils.py
0315/tests/: conftest.py  test_config.py  test_features.py
0315/themes/: mlops-theme.css
