[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-fti"
version = "1.0.0"
description = "MLOps FTI Pipeline - Feature, Training, Inference architecture for stock prediction"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "FTI Team"}
]
dependencies = [
    "gradio>=4.0.0",
    "plotly>=5.0.0",
    "yfinance>=0.2.0",
    "hopsworks>=3.0.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "python-dotenv>=1.0.0",
    "xgboost>=1.7.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.6.0",
    "joblib>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
]

# ─────────────────────────────────────────────────────────────────
# Ruff 配置（Linter & Formatter）
# ─────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
"E", # pycodestyle errors
"W", # pycodestyle warnings
"F", # Pyflakes
"I", # isort
"B", # flake8-bugbear
"C4", # flake8-comprehensions
"UP", # pyupgrade
"ARG", # flake8-unused-arguments
"SIM", # flake8-simplify
]
ignore = [
"E501", # line too long (handled by formatter)
"B008", # do not perform function calls in argument defaults
"B905", # zip without strict
"ARG001", # unused function argument (common in callbacks)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002", "S101"]

# ─────────────────────────────────────────────────────────────────
# MyPy 配置（型別檢查）
# ─────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "hopsworks.*",
    "xgboost.*",
    "sklearn.*",
    "plotly.*",
    "gradio.*",
    "joblib.*",
    "modal.*",
]
ignore_missing_imports = true

# ─────────────────────────────────────────────────────────────────
# Pytest 配置
# ─────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require external services",
]

# ─────────────────────────────────────────────────────────────────
# Coverage 配置
# ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
